Fixing some alignment

--- a/css/main.css
+++ b/css/main.css
@@ -10,10 +10,12 @@ html {
 
 main ol {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: : 1fr 1fr;
   gap: 2rem;
   margin: 0;
   padding: 0;
+  display: flex;
+  flex-direction: column;
 }
 
 ol > li {
@@ -25,14 +27,15 @@ ol > li {
 }
 
 main h1 {
-  font-faily: 'Oswald', sans-serif;
+  font-family: "Oswald", sans-serif;
   font-weight: bold;
   font-size: 2rem;
   color: #6f00e7;
   margin: 0;
+  text-align: center;
 }
 
-main span {
+main {
   display: flex;
   justify-content: space-between;
   gap: 1rem;
@@ -42,6 +45,7 @@ ul{
   display: flex;
   justify-content: space-between;
   list-style-type: none;
+  align-items: center;
 }
 
 .cart {
@@ -61,4 +65,8 @@ span {
 
 a {
   text-decoration: none;
+}
+
+p {
+  text-align: center;
 }
